tests/cases/alloc_certificate/accept/without_alloc_block_immediates.pr
fn tick(n : Int) : Int =
  let base = n + 1
  without alloc base + base
