tests/cases/alloc_certificate/reject/lifted_block.pr
type Box = Box(Int)

fn wrap(n : Int) : Box = without alloc Box(n)
